objects/vlocity_ins__VlocityDocuSignTemplate__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocuSignAccountId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DocuSign Account Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RoleTabs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Tabs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RolesData__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TabsData__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tabs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TemplateIdentifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Vlocity DocuSign Template</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vlocity Docusign Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DocuSign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>